--- a/twitter/Info.plist
+++ b/twitter/Info.plist
@@ -34,6 +34,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>Consumer Key</key>
+	<string>$(API_CONSUMER_KEY)</string>
+	<key>Consumer Secret</key>
+	<string>$(API_CONSUMER_SECRET_KEY)</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
